# NRLF

./: .flake8  .gitignore  .pre-commit-config.yaml  .sonarcube.properties  .tool-versions  CHANGELOG.md  Makefile  Pipfile  README.md  RELEASE  SCAFFOLDER_TODO.md  behave.ini  conftest.py  foo.ts  nrlf-dependencies.sh  nrlf.sh  postman_collection.json  pyproject.toml  pytest.ini  scaffold.sh  sonar-project.properties
.github/: dependabot.yml
.github/actions/: download-artifact.yml  install-tools.yml  setup-cache.yml  setup-credentials.yml
.github/workflows/: activate-stack.yml  ci.yaml  ci.yml  clear-cache.yml  merge.yml  minimal-ci.yml  persistent-environment.yml  pr-env-create-update.yml  pr-env-deploy.yml  pr-env-destroy.yml  prod-environment.yml  rollback-stack.yml  update-lambda-permissions.yml
account-wide/: scaffold_project.sh
api/consumer/: nrl-consumer-api.yaml  swagger-public.yaml  swagger.yaml
api/producer/: nrl-producer-api.yaml  swagger-public.yaml  swagger.yaml
api/tests/: test_indexes.py  test_smoke.py  test_status_endpoints.py
auths/: consumer.yml
changelog/: 2023-04-25.md  2023-04-30.md  2023-05-02.md  2023-05-03.md  2023-05-10.md  2023-05-11.md  2023-05-15.md  2023-05-19.md  2023-05-30.md  2023-06-13.md  2023-06-14.md  2023-06-20.md  2023-06-23.md  2023-06-29.md  2023-06-30.md  2023-07-06.md  2023-07-11a.md  2023-07-19.md  2023-07-19a.md  2023-07-27.md  2023-08-03.md  2023-08-03a.md  2023-08-14.md  2023-08-16.md  2023-08-21.md  2023-08-25.md  2023-08-29.md  2023-09-06.md  2023-09-13.md  2023-09-21.md  2023-10-09.md  2023-11-03.md  2023-11-09.md  2023-11-24.md  2024-01-09.md  2024-02-08.md  2024-03-14.md  2030-01-01.md  9999-12-31.md
changelog/scripts/: changelog-pre-commit.sh  changelog.py
cron/seed_sandbox/: config.py  index.py  repository.py  steps.py  validators.py
data/bars/: README.md
data_contracts/deploy_contracts/: constants.py  deploy_contracts.py  errors.py  model.py
data_contracts/global/: test-name.json
feature-tests/features/: producer-createDocumentPointer-success.feature  producer-supersedeDocumentPointer-failure.feature
feature_tests/: environment.py
feature_tests/common/: config_setup.py  constants.py  decorators.py  fixtures.py  models.py  repository.py  utils.py
feature_tests/steps/: _1_setup.py  _1_setup_edge_cases.py  _2_invoke.py  _3_response_status.py  _4_response_message.py  _5_final_state.py  __init__.py  fixtures.py
firehose/alert/: constants.py  index.py  steps.py
firehose/processor/: index.py
helpers/: setup.py
helpers/helpers/: aws_cli.py  aws_session.py  ecr.py  ecs.py  firehose.py  log.py  oauth.py  seed_data_repository.py  terraform.py
initial-bootstrap/: scaffold_project.sh
lambdas/nrl-swagger-ui/: build.sh  index.js  make.sh  package-lock.json  package.json
layer/: pyproject.toml
layer/lambda_utils/: setup.py
layer/nrlf/: setup.py
layer/test_permissions/: permissions.toml
mi/data_load/: data_load.py
mi/mi_alert/: index.py  steps.py
mi/reporting/: actions.py  constants.py  paths.py  report.py  report.sql  resources.py
mi/schema/: schema.sql  static_dimensions.sql
mi/schema_lambda/: handler.py  model.py  psycopg2.py
mi/sql/: create.sql  mi-create.sql  report.sql
mi/sql_query/: index.py  model.py  psycopg2.py  sql.py
mi/stream_writer/: README.md  constants.py  event_handling.py  index.py  model.py  psycopg2.py  sql.py  utils.py
nrlf/: scaffold_project.sh
nrlf/swagger/: consumer.yaml  producer.yaml
resources/fhir/: NRLF-RecordCategory-ValueSet.json  NRLF-RecordType-ValueSet.json
sandbox/: Dockerfile  docker-compose.yml  entrypoint.sh
sandbox/proxy/: proxy.py  pyproject.toml
sandbox/scripts/: build.sh  common.py  constants.py  sync_terraform.py  sync_zips.py
sandbox/tests/: test_app.py
scripts/: _auths.sh  _aws.sh  _bootstrap.sh  _constants.sh  _doc.sh  _firehose.sh  _install.sh  _lint.sh  _make.sh  _mi_report.sh  _oauth_token.sh  _sandbox.sh  _swagger.sh  _terraform.sh  _test.sh  _truststore.sh  activate_stack.py  add-perms-to-lambda.sh  are_resources_shared_for_stack.py  auth_setup.py  aws_session_assume.py  bootstrap.sh  build-lambda-dependency-layer.sh  build-lambda-layer.sh  build-lambda-package.sh  check-build-environment.sh  check-deploy-environment.sh  commit-msg.py  get-account-name-for-env.sh  get-current-info.sh  get_current_info.sh  get_env_config.py  get_s3_permissions.py  install.sh  nrlf-dependencies.sh  pull-lambda-code-for-stack.sh  set_env_config.py  set_smoketest_permissions.py  swagger.sh  swagger_generator.py  (+1 more)
scripts/build_scripts/: setup.py
scripts/tests/: consumer.yml  test_activate_stack.py  test_auth_setup.py
swagger/: README.md  consumer.yaml  nrl-consumer-api.yaml  nrl-producer-api.yaml  producer.yaml
swagger/consumer-static/: components.yaml  count.yaml  header.yaml  info-description.md  narrative.yaml  status.yaml
swagger/images/: nrl.drawio
swagger/producer-static/: components.yaml  document-reference-components.yaml  header.yaml  narrative.yaml  short-names.yaml  status.yaml
terraform/account-wide-infrastructure/: README.md
terraform/bootstrap/: README.md
terraform/infrastructure/: .terraform.lock.hcl  Makefile  README.md  api__consumer.tf  api__consumer__readDocumentReference.lambda.tf  api__consumer__searchDocumentReference.lambda.tf  api__consumer__searchViaPostDocumentReference.lambda.tf  api__producer.tf  api__producer__createDocumentReference.lambda.tf  api__producer__deleteDocumentReference.lambda.tf  api__producer__readDocumentReference.lambda.tf  api__producer__searchDocumentReference.lambda.tf  api__producer__updateDocumentReference.lambda.tf  api_gateway.tf  cloudwatch.tf  consumer.tftpl  data.tf  domain.tf  dynamodb.tf  dynamodb__consumer.tf  dynamodb__custodian.tf  dynamodb__document-pointer.tf  dynamodb__document-reference.tf  dynamodb__document-type.tf  dynamodb__document-types.tf  dynamodb__producer.tf  ephemeral-resources.tf  firehose.tf  kms.tf  kms__cloudwatch.tf  kms__consumer.tf  kms__custodian.tf  kms__document-pointer.tf  kms__document-reference.tf  kms__document-type.tf  lambda.tf  (+23 more)
(+781 files in other folders)
