[tool.poetry]
name = "nrlf-api"
version = "1.0.0"
description = ""
authors = ["NHS Digital"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^2.15.0"
nhs-number = "==1.2.1"
pydantic = "==1.10.9"
nrlf-lambda-pipeline = {git = "https://github.com/NHSDigital/nrlf-lambda-pipeline.git", tag = "v0.4.0"}
pytest = "^7.3.2"
boto3 = "^1.26.151"
pyjwt = "^2.7.0"
cryptography = "^41.0.1"
more-itertools = "^9.0.0"
typing-extensions = "^4.5.0"
requests = "^2.31.0"
nrlf-converter = {url = "https://github.com/NHSDigital/nrlf-converter/releases/download/0.0.4/nrlf_converter-0.0.4-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
sh = "^1.14.3"
awscli = "^1.27.3"
moto = "^4.1.11"
behave = "^1.2.6"
datamodel-code-generator = "^0.20.0"
pyyaml = "^5.4"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
flake8-print = "^5.0.0"
black = "^22.10.0"
pyhcl = "^0.4.4"
requests = "^2.28.1"
boto3 = "^1.26.3"
build-scripts = { path = "./scripts/build_scripts/", develop = true }
nrlf = { path = "./layer/nrlf/", develop = true }
lambda-utils = { path = "./layer/lambda_utils/", develop = true }
helpers = { path = "./helpers/", develop = true }
fire = "^0.5.0"
cookiecutter = "^2.1.1"
gherkin-official = "^24.1.0"
ez-setup = "^0.9"
pygments = "^2.14.0"
atlassian-python-api = "^3.32.2"
hypothesis = "^6.78.2"

[tool.poetry.group.legacy]
optional = true

[tool.poetry.group.legacy.dependencies]
libffx = "0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
