[tool.poetry]
name = "nrlf-api"
version = "1.0.0"
description = ""
authors = ["NHS Digital"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^2.20.0"
nhs-number = "==1.3.3"
pydantic = "==1.10.11"
nrlf-lambda-pipeline = {git = "https://github.com/NHSDigital/nrlf-lambda-pipeline.git", tag = "v0.4.0"}
pytest = "^7.4.0"
boto3 = "^1.28.3"
pyjwt = "^2.7.0"
cryptography = "^41.0.2"
more-itertools = "^9.0.0"
typing-extensions = "^4.7.1"
requests = "^2.31.0"
jsonschema = {version = "4.17.*", extras = ["format"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
sh = "^2.0.4"
awscli = "^1.27.165"
moto = "^4.1.13"
behave = "^1.2.6"
datamodel-code-generator = "^0.21.1"
pyyaml = "^5.4"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
flake8-print = "^5.0.0"
black = "^23.7.0"
pyhcl = "^0.4.4"
requests = "^2.28.1"
boto3 = "^1.26.3"
build-scripts = { path = "./scripts/build_scripts/", develop = true }
nrlf = { path = "./layer/nrlf/", develop = true }
lambda-utils = { path = "./layer/lambda_utils/", develop = true }
helpers = { path = "./helpers/", develop = true }
fire = "^0.5.0"
cookiecutter = "^2.2.3"
gherkin-official = "^24.1.0"
ez-setup = "^0.9"
pygments = "^2.14.0"
atlassian-python-api = "^3.39.0"
hypothesis = "^6.81.2"
nrlf-converter = {url = "https://github.com/NHSDigital/nrlf-converter/releases/download/0.0.6/nrlf_converter-0.0.6-py3-none-any.whl"}

[tool.poetry.group.legacy]
optional = true

[tool.poetry.group.legacy.dependencies]
libffx = "0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.sqlfluff.core]
dialect = "postgres"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "consistent"
